@@ -134,7 +134,7 @@ implements PrintObjectPageInputStreamImpl, ProxyImpl
         try {
             connection_.callMethod(pxId_, "mark",
                                    new Class[] {Integer.TYPE},
-                                   new Object[] { new Integer (readLimit) });
+                                   new Object[] { Integer.valueOf(readLimit) });
         }
         catch (InvocationTargetException e) {
             throw ProxyClientConnection.rethrow(e);
@@ -183,7 +183,7 @@ implements PrintObjectPageInputStreamImpl, ProxyImpl
         try {
             ProxyReturnValue rv = connection_.callMethod(pxId_, "read",
                                      new Class[] { byte[].class , Integer.TYPE, Integer.TYPE },
-                                     new Object[] { data, new Integer(dataOffset), new Integer(length) },
+                                     new Object[] { data, Integer.valueOf(dataOffset), Integer.valueOf(length) },
                                      myArgs, false);
 
             byte [] returnDataBuffer = (byte[])rv.getArgument(0);
@@ -224,7 +224,7 @@ implements PrintObjectPageInputStreamImpl, ProxyImpl
         try {
             return (boolean) connection_.callMethod(pxId_, "selectPage",
                                                     new Class[] { Integer.TYPE },
-                                                    new Object[] { new Integer(page) }).getReturnValueBoolean();
+                                                    new Object[] { Integer.valueOf(page) }).getReturnValueBoolean();
         }
         catch (InvocationTargetException e) {
             Throwable error = e.getTargetException();
@@ -245,7 +245,7 @@ implements PrintObjectPageInputStreamImpl, ProxyImpl
         try {
             return connection_.callMethod(pxId_, "skip",
                                           new Class[] { Long.TYPE },
-                                          new Object[] { new Long(bytesToSkip) }).getReturnValueLong();
+                                          new Object[] { Long.valueOf(bytesToSkip)}).getReturnValueLong();
         }
         catch (InvocationTargetException e) {
             Throwable error = e.getTargetException();
