@@ -99,7 +99,7 @@ implements PrintObjectTransformedInputStreamImpl, ProxyImpl
          try {
             ProxyReturnValue rv = connection_.callMethod(pxId_, "read",
                                      new Class[] { byte[].class , Integer.TYPE, Integer.TYPE },
-                                     new Object[] { data, new Integer(dataOffset), new Integer(length) },
+                                     new Object[] { data, Integer.valueOf(dataOffset), Integer.valueOf(length)},
                                      myArgs, false);
 
             byte [] returnDataBuffer = (byte[])rv.getArgument(0);
@@ -123,7 +123,7 @@ implements PrintObjectTransformedInputStreamImpl, ProxyImpl
         try {
             return connection_.callMethod(pxId_, "skip",
                                           new Class[] { Long.TYPE },
-                                          new Object[] { new Long(bytesToSkip) }).getReturnValueLong();
+                                          new Object[] { Long.valueOf(bytesToSkip)}).getReturnValueLong();
         }
         catch (InvocationTargetException e) {
             Throwable error = e.getTargetException();
