@@ -345,11 +345,11 @@ class IFSList extends java.awt.List
       **/
     public void setListType(int listType)
     {
-        Integer old = new Integer(directory_);
+        Integer old = Integer.valueOf(directory_);
 
         directory_ = listType;
 
-        propertyList.firePropertyChange("listType", old, new Integer(listType));
+        propertyList.firePropertyChange("listType", old, Integer.valueOf(listType));
     }
 
     /**
