@@ -846,14 +846,14 @@ public void setSearchType (int searchType)
 
     // Fire a vetoable change event.
     vetoListeners_.fireVetoableChange("searchType",
-        new Integer(old), new Integer(searchType));
+        Integer.valueOf(old), Integer.valueOf(searchType));
 
     // Make property change.
     tableData_.setSearchType(searchType);
 
     // Fire the property change event.
     changeListeners_.firePropertyChange("searchType",
-        new Integer(old), new Integer(searchType));
+        Integer.valueOf(old), Integer.valueOf(searchType));
 }
 
 
